[gd_scene load_steps=13 format=3 uid="uid://bbk3xah3s5r6y"]

[ext_resource type="PackedScene" uid="uid://pbfdscfpn858" path="res://scenes/map/map.tscn" id="1_8rlou"]
[ext_resource type="Script" uid="uid://7y41v2qhg7ov" path="res://scenes/run/run.gd" id="1_l7o68"]
[ext_resource type="Resource" uid="uid://4y6rbkxa3u7" path="res://scenes/run/run_startup.tres" id="2_wdonh"]
[ext_resource type="PackedScene" uid="uid://bt6adqq5yc6p7" path="res://scenes/ui/gold_ui.tscn" id="4_0tt4g"]
[ext_resource type="PackedScene" uid="uid://b7jiyvaydrivy" path="res://scenes/ui/card_pile_opener.tscn" id="4_gqbdr"]
[ext_resource type="PackedScene" uid="uid://cj4yg165reu2s" path="res://scenes/ui/health_ui.tscn" id="4_wo0nw"]
[ext_resource type="Texture2D" uid="uid://bc0ciu8ene25v" path="res://art/deck.png" id="5_5o40y"]
[ext_resource type="PackedScene" uid="uid://dsxyikq3vod45" path="res://scenes/ui/card_pile_view.tscn" id="6_5o40y"]
[ext_resource type="PackedScene" uid="uid://cn86xx3dsp5xh" path="res://scenes/relic_handler/relic_handler.tscn" id="6_ux63y"]
[ext_resource type="PackedScene" uid="uid://dcatlnity0gng" path="res://scenes/relic_handler/relic_tooltip.tscn" id="10_yeia0"]
[ext_resource type="Script" uid="uid://br7wyc2go3p1k" path="res://scenes/run/pause_menu.gd" id="11_g42ja"]

[sub_resource type="LabelSettings" id="LabelSettings_cnkn7"]

[node name="Run" type="Node"]
script = ExtResource("1_l7o68")
run_startup = ExtResource("2_wdonh")

[node name="Map" parent="." instance=ExtResource("1_8rlou")]

[node name="CurrentView" type="Node" parent="."]

[node name="DebugButtons" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
alignment = 1

[node name="MapButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Map"

[node name="BattleButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Battle"

[node name="ShopButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Shop"

[node name="TreasureButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Treasure"

[node name="RewardButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Reward"

[node name="CampfireButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Campfire"

[node name="TopBar" type="CanvasLayer" parent="."]
layer = 3

[node name="Background" type="ColorRect" parent="TopBar"]
custom_minimum_size = Vector2(0, 18)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5019608)

[node name="BarItems" type="HBoxContainer" parent="TopBar"]
custom_minimum_size = Vector2(0, 18)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2

[node name="HealthUI" parent="TopBar/BarItems" instance=ExtResource("4_wo0nw")]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
show_max_hp = true

[node name="GoldUI" parent="TopBar/BarItems" instance=ExtResource("4_0tt4g")]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 1

[node name="RelicHandlerContainer" type="CenterContainer" parent="TopBar/BarItems"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="RelicHandler" parent="TopBar/BarItems/RelicHandlerContainer" instance=ExtResource("6_ux63y")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="DeckButton" parent="TopBar/BarItems" node_paths=PackedStringArray("counter") instance=ExtResource("4_gqbdr")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture_normal = ExtResource("5_5o40y")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="TopBar/BarItems/DeckButton"]
layout_mode = 0
offset_left = -4.0
offset_top = 11.0
offset_right = 6.0
offset_bottom = 17.0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeckView" parent="TopBar" instance=ExtResource("6_5o40y")]
unique_name_in_owner = true
visible = false

[node name="RelicToolTip" parent="TopBar" instance=ExtResource("10_yeia0")]
unique_name_in_owner = true
visible = false

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
layer = 5
visible = false
script = ExtResource("11_g42ja")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6156863)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -20.0
offset_right = 47.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_cnkn7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackToGameButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 14)
layout_mode = 2
text = "Back"

[node name="SaveAndQuitButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 14)
layout_mode = 2
text = "Main Menu"
